Root styling on all the other fxml panels. Now testing is needed...

--- a/src/main/resources/nl/bos/views/DescribeObject.fxml
+++ b/src/main/resources/nl/bos/views/DescribeObject.fxml
@@ -3,13 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<HBox prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.bos.controllers.DescribeObject">
+<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="470.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="nl.bos.controllers.DescribeObject">
     <VBox alignment="TOP_CENTER" prefWidth="300.0" spacing="5.0">
-        <Label text="Select a type or table name" />
+        <Label styleClass="rootLabel" text="Select a type or table name"/>
         <HBox alignment="BOTTOM_LEFT">
-            <Label text="Name:" />
+            <Label styleClass="rootLabel" text="Name:"/>
          <Region prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <TextField fx:id="txtNrOfItems" editable="false" prefWidth="35.0" />
+            <TextField fx:id="txtNrOfItems" editable="false" prefWidth="50.0"/>
         </HBox>
         <ComboBox fx:id="cbTypesTables" maxWidth="1.7976931348623157E308" onAction="#handleTypesTables" prefWidth="150.0" />
         <HBox alignment="CENTER" spacing="5.0">
