--- a/src/main/resources/nl/bos/views/Login.fxml
+++ b/src/main/resources/nl/bos/views/Login.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-
-<VBox alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.bos.controllers.Login">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="-Infinity" prefWidth="350.0" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="nl.bos.controllers.Login">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
@@ -59,27 +51,23 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-               <Button fx:id="btnLogin" defaultButton="true" disable="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogin" prefWidth="80.0" text="Connect" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" />
-               <Button fx:id="btnLogout" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogout" prefWidth="80.0" text="Disconnect" visible="false" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" />
-               <Button id="btnCancel" cancelButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleCancel" prefWidth="80.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" />
-            <Label text="Info" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-              <Button id="btnServerMap" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleServerMap" prefWidth="145.0" text="Server Map" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-              <Button id="btnConnectionBrokerMap" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleConnectionBrokerMap" prefWidth="145.0" text="Connection Broker Map" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+             <Button fx:id="btnLogin" defaultButton="true" disable="true" mnemonicParsing="false"
+                     onAction="#handleLogin" prefWidth="150.0" text="Connect" GridPane.halignment="RIGHT"
+                     GridPane.hgrow="ALWAYS"/>
+             <Button fx:id="btnLogout" defaultButton="true" mnemonicParsing="false" onAction="#handleLogout"
+                     prefWidth="150.0" text="Disconnect" visible="false" GridPane.halignment="RIGHT"
+                     GridPane.hgrow="ALWAYS"/>
+             <Button id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel"
+                     prefWidth="150.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="LEFT"
+                     GridPane.hgrow="ALWAYS"/>
+             <Button id="btnServerMap" mnemonicParsing="false" onAction="#handleServerMap" prefWidth="150.0"
+                     text="Server Map" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
+             <Button id="btnConnectionBrokerMap" mnemonicParsing="false" onAction="#handleConnectionBrokerMap"
+                     prefWidth="150.0" text="Connection Broker Map" GridPane.columnIndex="2" GridPane.halignment="LEFT"
+                     GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
          </children>
       </GridPane>
     </VBox>
-   <GridPane>
-     <columnConstraints>
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-     </columnConstraints>
-     <rowConstraints>
-       <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="5.0" prefHeight="5.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-     </rowConstraints>
-      <children>
-           <Label fx:id="lblServer" text="&lt;server&gt;" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-           <Label fx:id="lblVersion" text="&lt;version&gt;" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-      </children>
-   </GridPane>
+    <Label fx:id="lblServer" text="&lt;server&gt;"/>
+    <Label fx:id="lblVersion" text="&lt;version&gt;"/>
 </VBox>
